[BlackBerry] We shouldn't set empty Content-Length & Content-Type to a request's headers. https://bugs.webkit.org/show_bug.cgi?id=83349

When there is a redirection for a POST request, we change POST to GET and set
Content-Length/Content-Type to empty strings.
We should remove these headers instead of adding empty strings.

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-12
Reviewed by George Staikos.

No new tests. Refactor.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::handleRedirect):
* platform/network/blackberry/ResourceRequest.h:
(ResourceRequest):
* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::ResourceRequest::clearHTTPContentLength):
(WebCore):
(WebCore::ResourceRequest::clearHTTPContentType):

Canonical link: https://commits.webkit.org/101245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113950 268f45cc-cd09-0410-ab3c-d52691b4dbfc